[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_hud"]
[ext_resource type="PackedScene" path="res://scenes/ui/inventory_ui.tscn" id="2_inventory"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.8, 0.2, 0.2, 1.0)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = 16.0
offset_top = 16.0
offset_right = 216.0
offset_bottom = 46.0
theme_override_styles/fill = SubResource("1")
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="."]
offset_left = 16.0
offset_top = 16.0
offset_right = 216.0
offset_bottom = 46.0
text = "100/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InventoryUI" parent="." instance=ExtResource("2_inventory")]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2 